rebild js at clear JS, without jquery

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
  -->
 <div class="header_container">
   <div class="header_nav">
-    <div class="logo">Theory</div>
+    <div class="logo" >Theory</div>
     <div class="nav_element"><a href="">Home</a></div>
     <div class="nav_element"><a href="">Generic</a></div>
     <div class="nav_element"><a href="">Elements</a></div>
   </div>
-  <div class="header_title">
+  <div class="header_title" id="featureTrigger">
     Welcome to Theory
   </div>
   <div class="header_subtitle">
@@ -50,7 +50,7 @@
 ##       ######## ##     ##    ##     #######  ##     ##
  -->
 
-<div class="features_container">
+<div class="features_container" id="features_container">
 
   <div class="features_element">
     <p class="features_title">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
@@ -164,7 +164,7 @@
   </div>
 </div>
 
-    <script src="js/jquery.js"></script>
-    <script src="js/my.js"></script>
+    <!-- <script src="js/jquery.js"></script> -->
+    <script src="js/native_js.js"></script>
   </body>
 </html>
