rebid all js with all animations

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 ##       ##       ##     ##    ##    ##     ## ##    ##
 ##       ######## ##     ##    ##     #######  ##     ##
  -->
+<div class="people_trigger" id="peopleTrigger"></div>
 
 <div class="features_container" id="features_container">
 
@@ -86,7 +87,9 @@
  <div class="people_title">Ipsum Feugard</div>
  <div class="poeple_subtitle">Semper suscript poursure apeade</div>
 
-<div class="people_container">
+<div class="advanages_trigger" id="advantagesTrigger"></div>
+
+<div class="people_container" id="people_container">
   <div class="peolpe_element">
     <div class="people_img"><img src="img/pic03.jpg" alt=""></div>
     <p class="people_element_title">Magna</p>
@@ -119,10 +122,12 @@
 ##     ## ########     ###    ##     ## ##    ##    ##
  -->
 
+
+
 <div class="advantages_title">Nunc Dignissim</div>
 <div class="advantages_subtitle">Aliquam erat volutpat nam dui</div>
 
-<div class="advantages_container">
+<div class="advantages_container" id="advantages_container">
 
   <div class="advantages_element">
     <div class="advantages_element_img"><img src="img/pic02.jpg" alt=""></div>
@@ -165,6 +170,6 @@
 </div>
 
     <!-- <script src="js/jquery.js"></script> -->
-    <script src="js/native_js.js"></script>
+    <script src="js/stable.js"></script>
   </body>
 </html>
